src/objects/Secret_Santa__c.object
<CustomObject>
    <fields>
        <fullName>SS_Email__c</fullName>
        <description>The email address of the secret santa</description>
        <label>Secret Santas Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Santa_Giftee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person this Secret Santa will give a gift to</description>
        <label>Secret Santa Giftee</label>
        <referenceTo>Secret_Santa__c</referenceTo>
        <relationshipLabel>Secret Santa Giftees</relationshipLabel>
        <relationshipName>Secret_Santa_Giftees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secret_Santa_Wants__c</fullName>
        <description>Enter what this person wants in return for Secret Santa</description>
        <inlineHelpText>Enter what this person wants in return for Secret Santa</inlineHelpText>
        <label>Secret Santa Wants</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Secret Santa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SS_Email__c</columns>
        <columns>Secret_Santa_Wants__c</columns>
        <columns>Secret_Santa_Giftee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Secret Santa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secret Santas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>